fix: fixed middlewares and entities
