# request/currency.go
@@ -5,13 +5,13 @@ import (
 )
 
 type Currency struct {
-	BaseCurrency   string  `binding:"base_currency" validate:"iso4217"`
-	TargetCurrency string  `binding:"target_currency" validate:"iso4217"`
+	BaseCurrency   string  `query:"base_currency" validate:"iso4217"`
+	TargetCurrency string  `query:"target_currency" validate:"iso4217"`
 	Amount         float64 `json:"amount" validate:"required,gt=0"`
 }
 
-func (c Currency) BuildFromFiberCtx(ctx *fiber.Ctx) error {
-	err := ctx.ParamsParser(c)
+func (c *Currency) BuildFromFiberCtx(ctx *fiber.Ctx) error {
+	err := ctx.QueryParser(c)
 	if err != nil {
 		return err
 	}
